--- a/priv/static/lustre_todo.css
+++ b/priv/static/lustre_todo.css
@@ -544,9 +544,9 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.text-green-400 {
-  --tw-text-opacity: 1;
-  color: rgb(74 222 128 / var(--tw-text-opacity));
+.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
 }
 
 .text-red-400 {
